package GUI;

public enum Screen {
	Login,
	User,
	IT,
	Account
}
