package client;
import GUI.ClientCalls;
public class ClientController implements ClientCalls {
	
}
