@startuml
hide empty members
package ServerApp{
class Server{}
class ServerComponents{}

Server *-- ServerComponents
}

class Wrapper{}

package ClientApp{
class Client{}
class ClientController{}
Client <-[norank]- ClientController : Uses
}

package GUI{
class MainWindow{}
class Screens{}

MainWindow <-- Screens: Display On
}


ServerApp -right[hidden]-> Wrapper
Wrapper -right[hidden]-> ClientApp
ClientApp -right[hidden]-> GUI

Server <.[norank].> Wrapper : Send Requests By
Wrapper <..[norank]..> Client : Send Requests By

class DataModel {}

Client -down-> DataModel : Writes To
Screens <-down- DataModel : Reads From
ClientController <-- Screens : Passes Commands
@enduml
